transporting the xlnc-v1

--- a/.gitignore
+++ b/.gitignore
@@ -23,12 +23,19 @@ coverage
 # node-waf configuration
 .lock-wscript
 
+#changes for other things
+#another vshot changes
+
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
 # Dependency directories
 node_modules
+bower_components
 jspm_packages
+
+#public package used for build
+public
 
 # Optional npm cache directory
 .npm
